Actualizando index.html y empleado flexbox en css

--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
         <section id="hero" aria-labelledby="hero-title">
             <img id="hero-img" src="./img/galaxy-s25-ultra-features-kv-g.jpg" alt="Imagen del smartphone Samsung S25 Ultra">
             <h1 id="hero-title">SAMSUNG GALAXY S25 ULTRA</h1>
-            <p>
+            <p id="hero-description">
                 Descubre el Samsung Galaxy 2025, el smartphone que redefine la experiencia móvil con tecnología de vanguardia, diseño elegante y un rendimiento sin límites.
             </p>
         </section>
 
         <!-- Características -->
         <section id="features">
+            <h2>Características Principales</h2>
             <article>
                 <h3>Pantalla</h3>
                 <img src="./img/pantalla-smartphone.png" alt="Pantalla del smartphone">
@@ -92,13 +93,13 @@
         <!-- Delivery -->
         <section id="delivery" aria-labelledby="delivery-title">
             <h2 id="delivery-title">Opciones de Envío</h2>
-            <p>Ofrecemos envíos rápidos y seguros a nivel nacional e internacional.</p>
-            <ul>
+            <p id="delivery-description">Ofrecemos envíos rápidos y seguros a nivel nacional e internacional.</p>
+            <ul id="delivery-options">
                 <li>Envío estándar (5-7 días hábiles)</li>
                 <li>Envío exprés (2-3 días hábiles)</li>
                 <li>Envío internacional (7-14 días hábiles)</li>
             </ul>
-            <p>Seguimiento en tiempo real disponible para todas las órdenes.</p>
+            <p id="delivery-description-end">Seguimiento en tiempo real disponible para todas las órdenes.</p>
         </section>
 
         <!-- Métodos de Pago -->
