Ajustado footer de html

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
     </main>
     
     <!-- Pie de página -->
-    <footer>
-        <p aria-label="Pie de página" >&copy; Todos los derechos reservados a eber2k1.</p>
+    <footer aria-label="Pie de página">
+        <p >&copy; Todos los derechos reservados a eber2k1.</p>
         <p>Siguenos en:
             <a href="#">Facebook</a> |
             <a href="#">Twitter</a> |
