Añadiendo section de galeria de fotos

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </div>
             <ul>
                 <li><a href="#features" aria-current="page">Características</a></li>
+                <li><a href="#gallery">Galería de imagenes </a></li>
                 <li><a href="#delivery">Envíos</a></li>
                 <li><a href="#payment-methods">Pagos</a></li>
                 <li><a href="#contact">Contacto</a></li>
@@ -89,6 +90,18 @@
                 </p>
             </article>
         </section>
+
+        <!-- Galería de imágenes -->
+        <section id="gallery" aria-label="galeria de imagenes">
+            <h2>Galería de Imágenes</h2>
+                <ul id="gallery-images">
+                    <li><img src="./img/samsung-foto-1.jpg" alt="Parte trasera del Samsung Galaxy S25 Ultra"></li>
+                    <li><img src="./img/samsung-foto-2.jpeg" alt="Imagen del Samsung Galaxy S25 Ultra"></li>
+                    <li><img src="./img/samsung-foto-3.jpg" alt="Imagen del Samsung Galaxy S25 Ultra"></li>
+                    <li><img src="./img/samsung-foto-4.jpg" alt="Imagen del Samsung Galaxy S25 Ultra"></li>
+                </ul>
+        </section>
+
 
         <!-- Delivery -->
         <section id="delivery" aria-labelledby="delivery-title">
