Actualizando index.html

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
             <h2 id="delivery-title">Opciones de Envío</h2>
             <p id="delivery-description">Ofrecemos envíos rápidos y seguros a nivel nacional e internacional.</p>
             <ul id="delivery-options">
-                <li> <img src="./img/delivery-icons/shipping-svgrepo-com.svg" alt=""> Envío estándar (5-7 días hábiles)</li>
-                <li> <img src="./img/delivery-icons/shipping-fast-svgrepo-com.svg" alt=""> Envío exprés (2-3 días hábiles)</li>
-                <li> <img src="./img/delivery-icons/airplane-svgrepo-com.svg" alt="">Envío internacional (7-14 días hábiles)</li>
+                <li> <img src="./img/delivery-icons/shipping-svgrepo-com.svg" alt=""> <h3>Envío estándar (5-7 días hábiles)</h3></li>
+                <li> <img src="./img/delivery-icons/shipping-fast-svgrepo-com.svg" alt=""> <h3>Envío exprés (2-3 días hábiles)</h3></li>
+                <li> <img src="./img/delivery-icons/airplane-svgrepo-com.svg" alt=""><h3>Envío internacional (7-14 días hábiles)</h3></li>
             </ul>
             <p id="delivery-description-end">Seguimiento en tiempo real disponible para todas las órdenes.</p>
         </section>
