--- a/testimonios.html
+++ b/testimonios.html
@@ -40,11 +40,7 @@
                 </a>
             </div>
             <ul class="flex flex-wrap justify-center md:justify-end space-x-4 md:space-x-6 items-center w-full md:w-auto">
-                <li><a class="text-xs md:text-lg  hover:text-blue-950 dark:hover:text-blue-200 transition-colors" href="#features">Características</a></li>
-                <li><a class="text-xs md:text-lg  hover:text-blue-950 dark:hover:text-blue-200 transition-colors" href="#gallery">Galería</a></li>
-                <li><a class="text-xs md:text-lg  hover:text-blue-950 dark:hover:text-blue-200 transition-colors" href="#delivery">Envíos</a></li>
-                <li><a class="text-xs md:text-lg  hover:text-blue-950 dark:hover:text-blue-200 transition-colors" href="#payment-methods">Pagos</a></li>
-                <li><a class="text-xs md:text-lg  hover:text-blue-950 dark:hover:text-blue-200 transition-colors" href="#contact">Contacto</a></li>
+                <li> <a class="text-xs md:text-lg  hover:text-blue-950 dark:hover:text-blue-200 transition-colors" href="./index.html">Inicio</a></li>
                 <li><a class="text-xs md:text-lg  hover:text-blue-950 dark:hover:text-blue-200 transition-colors" href="./testimonios.html">Testimonios</a></li>
                 <li><a class="text-xs md:text-lg  px-4 py-2 bg-blue-950 text-white rounded-lg hover:bg-blue-800 transition-colors" href="./compra.html">Compra</a></li>
             </ul>
