actualizando urls de imagenes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             id="hero" aria-labelledby="hero-title">
             <div class="absolute inset-0 z-0">
                 <img class="w-full h-full object-cover object-center opacity-70 dark:opacity-50"
-                    src="../img/galaxy-s25-ultra-features-kv-g.jpg" alt="Imagen del smartphone Samsung S25 Ultra">
+                    src="./img/galaxy-s25-ultra-features-kv-g.jpg" alt="Imagen del smartphone Samsung S25 Ultra">
                 <div class="absolute inset-0 bg-gradient-to-b from-transparent to-white dark:to-samsung-dark"></div>
             </div>
             <div class="container mx-auto px-6 py-12 z-10 text-center">
@@ -183,10 +183,10 @@
                     <h3 class="text-xl font-semibold mb-6 text-blue-800 dark:text-blue-400">💳 Tarjetas de
                         crédito y débito</h3>
                     <div class="flex flex-wrap justify-center gap-4">
-                        <img src="../img/methods-payments-icons/visa-classic-svgrepo-com.svg" alt="Visa" class="h-12">
-                        <img src="../img/methods-payments-icons/mastercard-full-svgrepo-com.svg" alt="Mastercard"
+                        <img src="./img/methods-payments-icons/visa-classic-svgrepo-com.svg" alt="Visa" class="h-12">
+                        <img src="./img/methods-payments-icons/mastercard-full-svgrepo-com.svg" alt="Mastercard"
                             class="h-12">
-                        <img src="../img/methods-payments-icons/american-express-svgrepo-com.svg" alt="American Express"
+                        <img src="./img/methods-payments-icons/american-express-svgrepo-com.svg" alt="American Express"
                             class="h-12">
                     </div>
                 </li>
@@ -195,7 +195,7 @@
                         <h3 class="text-xl font-semibold mb-6 text-blue-800 dark:text-blue-400">🏦 Transferencias
                             bancarias</h3>
                         <div class="flex justify-center">
-                            <img src="../img/methods-payments-icons/bank-card-svgrepo-com.svg" alt="Banco" class="h-12">
+                            <img src="./img/methods-payments-icons/bank-card-svgrepo-com.svg" alt="Banco" class="h-12">
                         </div>
                     </section>
                 </li>
@@ -203,12 +203,12 @@
                     <h3 class="text-xl font-semibold mb-6 text-blue-800 dark:text-blue-400">🌍 Plataformas
                         digitales</h3>
                     <div class="flex flex-wrap justify-center gap-4">
-                        <img src="../img/methods-payments-icons/apple-pay-svgrepo-com.svg" alt="Apple Pay" class="h-10">
-                        <img src="../img/methods-payments-icons/google-pay-svgrepo-com.svg" alt="Google Pay"
+                        <img src="./img/methods-payments-icons/apple-pay-svgrepo-com.svg" alt="Apple Pay" class="h-10">
+                        <img src="./img/methods-payments-icons/google-pay-svgrepo-com.svg" alt="Google Pay"
                             class="h-10">
-                        <img src="../img/methods-payments-icons/paypal-svgrepo-com.svg" alt="PayPal" class="h-10">
-                        <img src="../img/methods-payments-icons/plin-seeklogo.png" alt="Plin" class="h-10">
-                        <img src="../img/methods-payments-icons/yape-seeklogo.png" alt="Yape" class="h-10">
+                        <img src="./img/methods-payments-icons/paypal-svgrepo-com.svg" alt="PayPal" class="h-10">
+                        <img src="./img/methods-payments-icons/plin-seeklogo.png" alt="Plin" class="h-10">
+                        <img src="./img/methods-payments-icons/yape-seeklogo.png" alt="Yape" class="h-10">
                     </div>
                 </li>
             </ul>
