--- a/testimonios.html
+++ b/testimonios.html
@@ -49,7 +49,7 @@
             <!-- Menú principal (desktop) -->
             <ul class="hidden md:flex flex-wrap justify-center md:justify-end space-x-4 md:space-x-6 items-center">
                 <li><a class="text-xs md:text-lg hover:text-blue-950 dark:hover:text-blue-200 transition-colors"
-                    href="./Inicio.html">Inicio</a></li>
+                    href="./index.html">Inicio</a></li>
                 <li><a class="text-xs md:text-lg hover:text-blue-950 dark:hover:text-blue-200 transition-colors"
                         href="./testimonios.html">Testimonios</a></li>
                 <li><a class="text-xs md:text-lg px-4 py-2 bg-blue-950 text-white rounded-lg hover:bg-blue-800 transition-colors"
@@ -60,7 +60,7 @@
         <div id="mobile-menu" class="md:hidden hidden bg-white dark:bg-gray-900">
             <ul class="flex flex-col space-y-2 p-4">
                 <li><a class="block text-base hover:text-blue-950 dark:hover:text-blue-200 transition-colors"
-                    href="./Inicio.html">Inicio</a></li>
+                    href="./index.html">Inicio</a></li>
                 <li><a class="block text-base hover:text-blue-950 dark:hover:text-blue-200 transition-colors"
                         href="./testimonios.html">Testimonios</a></li>
                 <li><a class="block text-base px-4 py-2 bg-blue-950 text-white rounded-lg hover:bg-blue-800 transition-colors"
